--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,6 @@
         <spring-cloud.version>Dalston.SR3</spring-cloud.version>
 
         <junit.version>4.12</junit.version>
-        <testng.version>6.11</testng.version>
         <assertj.version>3.8.0</assertj.version>
         <hamcrest.version>1.3</hamcrest.version>
         <mockito.version>2.10.0</mockito.version>
@@ -69,11 +68,6 @@
                 <version>${touk-throwing-function.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.testng</groupId>
-                <artifactId>testng</artifactId>
-                <version>${testng.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
@@ -90,8 +84,8 @@
                 <version>${spring-boot.version}</version>
                 <exclusions>
                     <exclusion>
-                        <groupId>junit</groupId>
-                        <artifactId>junit</artifactId>
+                        <groupId>com.vaadin.external.google</groupId>
+                        <artifactId>android-json</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
@@ -204,12 +198,6 @@
         <dependency>
             <groupId>io.vavr</groupId>
             <artifactId>vavr</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <dependency>
